--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -22,15 +22,6 @@ jobs:
       - name: Install Wget
         run: sudo apt install -y wget
 
-      - name: Download Cast
-        run: wget -q https://github.com/themeliolabs/artifacts/raw/master/cast
-
-      - name: Make Cast Executable
-        run: chmod +x cast
-
-      - name: Move Cast To A PATH Directory
-        run: sudo mv cast /usr/local/bin/forge
-
       - name: Download Forge
         run: wget -q https://github.com/themeliolabs/artifacts/raw/master/forge
 
@@ -41,9 +32,9 @@ jobs:
         run: sudo mv forge /usr/local/bin/forge
 
       - name: Update Submodules
-        run: git submodule update --init --recursive
+        run: forge update
 
       - name: Run Forge Tests
         env:
           RUST_LOG: forge=trace
-        run: forge test --verbosity 3
+        run: forge test -vvv
