--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,6 @@
 [default]
-gas-reports = ["ThemelioBridge"]
+gas-reports = ["*"]
 verbosity = 3
 optimizer = false
-optimizer_runs = 200
+optimizer_runs = 10
 via_ir = false
