--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -43,4 +43,4 @@ jobs:
       - name: Run Forge Tests
         env:
           RUST_LOG: forge=trace
-        run: forge test -vvv
+        run: forge test -vvv --no-match-test FFI
