--- a/.gitmodules
+++ b/.gitmodules
@@ -10,6 +10,7 @@
 [submodule "lib/forge-std"]
 	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
-[submodule "src/test/differential"]
-	path = src/test/differential
+
+[submodule "src/test/differentials"]
+	path = src/test/differentials
 	url = https://github.com/themeliolabs/bridge-differential-tests
