--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -13,8 +13,11 @@ jobs:
   build:
     runs-on: self-hosted
 
+    container:
+      image: rust:latest
+
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Update Apt
         run: sudo apt update
