--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Update Apt
-        run: sudo apt update
+        run: apt update
 
       - name: Install Wget
         run: apt install -y wget
