--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Build Differentials
         working-directory: src/test/differentials
-        run: cargo build --release
+        run: cargo build
 
       - name: Run Forge Tests
         env:
