Added a missing step.

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -35,6 +35,9 @@ jobs:
 
       - uses: themeliolabs/actions-mold@v1
 
+      - name: Update Submodules
+        run: git submodule update --init --recursive
+
       - name: Build Differentials
         working-directory: src/test/differentials
         run: mold --run cargo build
