Trying a rustup fix.

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -38,6 +38,9 @@ jobs:
       - name: Update Submodules
         run: git submodule update --init --recursive
 
+      - name: Add Default Toolchain
+        run: rustup default stable
+
       - name: Build Differentials
         working-directory: src/test/differentials
         run: mold --run cargo build
