--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -69,7 +69,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Update Apt
-        run: apt update
+        run: sudo apt update
 
       - uses: actions/download-artifact@v3
         with:
