--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -71,9 +71,9 @@ jobs:
       - name: List
         run: ls -la
 
-#      - name: Update Submodules
-#        run: git submodule update --init --recursive
-#
+      - name: Update Submodules
+        run: git submodule update --init --recursive
+
 #      - name: Update Apt
 #        run: sudo apt update
 #
