--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -69,10 +69,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: List
+        working-directory: ~/bridge-sol/bridge-sol
         run: ls -la
 
-      - name: Update Submodules
-        run: git submodule update --init --recursive
+#      - name: Update Submodules
+#        run: git submodule update --init --recursive
 
 #      - name: Update Apt
 #        run: sudo apt update
