--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -72,7 +72,7 @@ jobs:
         run: echo $HOME
 
       - name: Show Working
-        run: ls -la /__w
+        run: ls -la /__w/bridge-sol
 
 #      - name: List
 #        working-directory: ~/bridge-sol/bridge-sol
