--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -107,7 +107,7 @@ jobs:
         run: chmod +x forge
 
       - name: Move Forge To A PATH Directory
-        run: mv forge /usr/local/bin/forge
+        run: sudo mv forge /usr/local/bin/forge
 
       - name: Run Slither
         run: slither .
