--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -61,19 +61,13 @@ jobs:
       volumes:
         - /var/lib/docker:/var/lib/docker
 
-    #    needs:
-    #      - build-differentials
-
     steps:
       - uses: actions/checkout@v3
-
-      #      - name: Add Ethereum Repository
-      #        run: sudo add-apt-repository -y ppa:ethereum/ethereum
 
       - name: Update Apt
         run: sudo apt update
 
-      - name: Update Python Dependencies
+      - name: Install Python Dependencies
         run: sudo apt install -y libssl-dev python3-dev
 
       - name: Install Mythril
@@ -81,34 +75,6 @@ jobs:
 
       - name: Update Submodules
         run: git submodule update --init --recursive
-
-      #      - uses: actions/download-artifact@v3
-      #        with:
-      #          name: differentials-dev
-      #
-      #      - name: Extract Differentials
-      #        run: tar -xf differentials.tar.gz
-      #
-      #      - name: Create Differentials Directory
-      #        run: mkdir -p src/test/differentials/target/debug
-      #
-      #      - name: Move Differentials Binary
-      #        run: mv bridge_differential_tests src/test/differentials/target/debug/
-
-      #      - name: Download Forge
-      #        run: wget -q https://github.com/themeliolabs/artifacts/raw/master/forge.tar.gz
-      #
-      #      - name: Extract Forge
-      #        run: tar -xf forge.tar.gz
-      #
-      #      - name: Remove Forge Archive
-      #        run: rm forge.tar.gz
-      #
-      #      - name: Make Forge Executable
-      #        run: chmod +x forge
-      #
-      #      - name: Move Forge To A PATH Directory
-      #        run: sudo mv forge /usr/local/bin/forge
 
       - name: Run Mythril Analysis On BridgeProxy
         run: myth analyze src/BridgeProxy.sol --solc-json mythril.config.json
