Trying disabling optimisation.

--- a/mythril.config.json
+++ b/mythril.config.json
@@ -8,7 +8,7 @@
         "openzeppelin-contracts-upgradeable/=lib/openzeppelin-contracts-upgradeable/"
     ],
     "optimizer": {
-        "enabled": true,
+        "enabled": false,
         "runs": 100
     },
     "viaIR": true
