Trying an IR field.

--- a/mythril.config.json
+++ b/mythril.config.json
@@ -7,8 +7,9 @@
         "openzeppelin-contracts/=lib/openzeppelin-contracts/",
         "openzeppelin-contracts-upgradeable/=lib/openzeppelin-contracts-upgradeable/"
     ],
+    "viaIR": true,
     "optimizer": {
-        "enabled": false,
+        "enabled": true,
         "runs": 100
     },
     "viaIR": true
