--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -76,11 +76,20 @@ jobs:
       - name: Update Submodules
         run: git submodule update --init --recursive
 
-      - name: Run Mythril Analysis On BridgeProxy
-        run: myth analyze src/BridgeProxy.sol --solc-json mythril.config.json
+      - name: Show Mythril Version
+        run: myth --version
 
-      - name: Run Mythril Analysis On ThemelioBridge
-        run: myth analyze src/ThemelioBridge.sol --solc-json mythril.config.json
+      - name: Show Solc Version
+        run: solc --version
+
+      - name: Show Python Version
+        run: python -V
+
+#      - name: Run Mythril Analysis On BridgeProxy
+#        run: myth analyze src/BridgeProxy.sol --solc-json mythril.config.json
+#
+#      - name: Run Mythril Analysis On ThemelioBridge
+#        run: myth analyze src/ThemelioBridge.sol --solc-json mythril.config.json
 
   run-forge-tests:
     runs-on: self-hosted
