--- a/mythril.config.json
+++ b/mythril.config.json
@@ -7,6 +7,7 @@
         "openzeppelin-contracts/=lib/openzeppelin-contracts/",
         "openzeppelin-contracts-upgradeable/=lib/openzeppelin-contracts-upgradeable/"
     ],
+    "viaIR": true,
     "optimizer": {
         "enabled": true,
         "runs": 100
